--- a/examples/login.html
+++ b/examples/login.html
@@ -16,7 +16,7 @@
   <link href="../assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
   <!-- Argon CSS -->
   <link type="text/css" href="../assets/css/argon.css?v=1.0.0" rel="stylesheet">
-  
+
   <style>
 
 /* The message box is shown when the user clicks on the password field */
@@ -157,13 +157,13 @@
               <div class="text-center text-muted mb-4">
                 <small>Or sign in with credentials</small>
               </div>
-              <form role="form">
+              <form role="form" name="myForm" action="/action_page.php" onsubmit ="return validateForm();" method="post">
                 <div class="form-group mb-3">
                   <div class="input-group input-group-alternative">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Email" type="email">
+                    <input class="form-control" placeholder="Email"  type="email"required">
                   </div>
                 </div>
                 <div class="form-group">
@@ -171,8 +171,15 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Password" type="password">
+                    <input class="form-control" placeholder="Password" type="password"
+
+                    id="psw" pattern="(?=.{8,}" title="Must contain at least 8 or more characters">
                   </div>
+                  <div id="message">
+                  <h3>Password must contain the following:</h3>
+                  <p id="length" class="invalid">Minimum <b>8 characters</b></p>
+                  </div>
+
                 </div>
                 <div class="custom-control custom-control-alternative custom-checkbox">
                   <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
@@ -181,7 +188,7 @@
                   </label>
                 </div>
                 <div class="text-center">
-                  <button type="button" class="btn btn-primary my-4">Sign in</button>
+                  <button type="submit" class="btn btn-primary my-4"  >Sign in</button>
                 </div>
               </form>
             </div>
@@ -228,10 +235,10 @@
   </footer>
   <!-- Argon Scripts -->
   <!-- Core -->
+
   <script src="../assets/vendor/jquery/dist/jquery.min.js"></script>
   <script src="../assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Argon JS -->
   <script src="../assets/js/argon.js?v=1.0.0"></script>
 </body>
-
-</html>
+</html> 
