--- a/examples/login.html
+++ b/examples/login.html
@@ -17,7 +17,7 @@
   <!-- Argon CSS -->
   <link type="text/css" href="../assets/css/argon.css?v=1.0.0" rel="stylesheet">
 
-  <style>
+<style>
 
 /* The message box is shown when the user clicks on the password field */
 #message {
@@ -157,7 +157,7 @@
               <div class="text-center text-muted mb-4">
                 <small>Or sign in with credentials</small>
               </div>
-              <form role="form" name="myForm" action="/action_page.php" onsubmit ="return validateForm();" method="post">
+              <form role="form" name="myForm" action="" onsubmit ="return validateForm();" method="post">
                 <div class="form-group mb-3">
                   <div class="input-group input-group-alternative">
                     <div class="input-group-prepend">
@@ -172,13 +172,15 @@
                       <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                     </div>
                     <input class="form-control" placeholder="Password" type="password"
-
-                    id="psw" pattern="(?=.{8,}" title="Must contain at least 8 or more characters">
+                    id="psw" name="psw" pattern="(?=.*\d).{8,}"
+                   title="Must contain at least 8 or more characters">
                   </div>
+
                   <div id="message">
                   <h3>Password must contain the following:</h3>
                   <p id="length" class="invalid">Minimum <b>8 characters</b></p>
-                  </div>
+                </div>
+
 
                 </div>
                 <div class="custom-control custom-control-alternative custom-checkbox">
@@ -235,7 +237,44 @@
   </footer>
   <!-- Argon Scripts -->
   <!-- Core -->
+<script>
+function validateForm() {
+  var x = document.forms["myForm"]["email"].value;
+  var atpos = x.indexOf("@");
+  var dotpos = x.lastIndexOf(".");
+  if (atpos<1 || dotpos<atpos+2 || dotpos+2>=x.length) {
+    alert("Not a valid e-mail address");
+    return false;
+  }
+}
+</script>
+  
+  <script>
+var myInput = document.getElementById("psw");
+var length = document.getElementById("length");
 
+// When the user clicks on the password field, show the message box
+myInput.onfocus = function() {
+  document.getElementById("message").style.display = "block";
+}
+
+// When the user clicks outside of the password field, hide the message box
+myInput.onblur = function() {
+  document.getElementById("message").style.display = "none";
+}
+
+// When the user starts to type something inside the password field
+myInput.onkeyup = function() {
+  // Validate length
+  if(myInput.value.length >= 8) {
+    length.classList.remove("invalid");
+    length.classList.add("valid");
+  } else {
+    length.classList.remove("valid");
+    length.classList.add("invalid");
+  }
+}
+</script>
   <script src="../assets/vendor/jquery/dist/jquery.min.js"></script>
   <script src="../assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Argon JS -->
